# ft_printf

./: CMakeLists.txt  Makefile  README.md  author  ft_bzero.c  ft_chardup.c  ft_check_null.c  ft_flist_fun.c  ft_float_bits.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_itoa_base.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_numlen.c  ft_pow.c  ft_powneg.c  ft_print_flag_p.c  ft_print_memory.c  ft_printf.c  ft_printf.h  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_u.c  ft_putstr_fd.c  ft_read_bits.c  ft_read_double.c  ft_read_float.c  ft_read_l_double.c  ft_strcat.c  ft_strcmp.c  ft_strcpy.c  (+38 more)
libft/: ft_atoi.c  ft_chardup.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memset.c  ft_numlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_u.c  ft_putstr.c  ft_strchr.c  ft_strclr.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strref.c  ft_strstr.c  ft_strsub_free.c  ft_swap.c  ft_utoa_base.c  ft_utoi.c  (+2 more)
test/: a.out  main.c
test/a.out.dSYM/Contents/Resources/DWARF/: a.out
